Fri Aug 20 13:29:22 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:

          One more shot at fixing the behavior of the service configurator
          in the face of missing defaulted svc.conf file.
        
        * tests/Missing_Svc_Conf_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
        
          Added a proper test to ensure changes to this behavior are caught
          in the future.

Fri Aug 20 11:58:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TSS_T.cpp:
          Updated comment

        * include/makeinclude/platform_g++_common.GNU:
          If minimaltoc is set to 1, add -mminimal-toc to compiler flags

        * include/makeinclude/platform_linux.GNU:
          Removed check for ppc64, if you build for ppc64 and need -mminimal-toc
          add minimaltoc=1 to your platform_macros.GNU file

Fri Aug 20 09:52:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/inet_ssl.mpb:
          Removed feature subproject config.

        * protocols/ace/INet/inet_ssl.mpc:
          Added sublibrary project I forgot yesterday.

Thu Aug 19 12:37:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Functor_T.h:
          Doxygen changes

        * include/makeinclude/platform_linux.GNU:
          Make it possible to control -mminimal-toc through the
          platform_macros.GNU file using minimaltoc

Thu Aug 19 12:09:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * bin/MakeProjectCreator/config/inetssl.mpb:
        * protocols/ace/INet/inet.mpc:
        * protocols/ace/INet/inet_ssl.mpb:
          Changes to split INet into 2 libraries; regular and SSL.
          Fixes dependencies of DAnCE tools on SSL.

Wed Aug 18 09:26:04 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed a compile warning.
